added responsive meta tag

--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
     <!-- Materialize CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/css/materialize.min.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
+    <!-- responsive -->
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- styles -->
     <link rel="stylesheet" href="styles.css">
     <title>React TV</title>
