--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <!-- responsive -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- styles -->
-    <link rel="stylesheet" href="reset.css">
+    <!-- <link rel="stylesheet" href="reset.css"> -->
     <link rel="stylesheet" href="styles.css">
     <title>React TV</title>
     <meta description="Practicing React 16 by making a television... ok it's really an Etch-a-Sketch.">
@@ -41,7 +41,7 @@
           <div class="col l4 offset-l2 s12">
             <h3 class="white-text">Ingredients:</h3>
             <ul>
-                <li>React</li>
+                <li>React 16</li>
                 <li>Babel</li>
                 <li>Materialize CSS</li>
             </ul>
